apps/dev/lms/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:ETgygsEz/Hj5tciBwIjL2sCaxLMvRvHH,iv:8fJTlGk8g0HrSTw1sObNylClgZpzEMCvjlgcWs8OwIs=,tag:txByi8SItJsZDs3K6oabig==,type:str]
        kubernetes.io/ingress.class: traefik-external
    # labels:
    #     app.kubernetes.io/name: lms
    name: lms
    namespace: media
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:GCVRhNLL3oJr4gfZ1ute2s2NZlmm+tGQD5IDUvkQX/46QHKg,iv:nmjENwSqMFXCBCdz6KlmgjznEOMIzQBzRH+fin9mfJA=,tag:Lt1LayRe4pxiRc+z8S9e0Q==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: lms
              port: 9000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:tNQ3ob6K7FlybTVWht9LCpCurrX5gXSa,iv:sS2Yt3jSMQD1XeZI5G8BZJ9mXrqFsepv087sYcW3Ems=,tag:tn6rdhJf3t6u3RU/HABOrw==,type:str]
              sans:
                - ENC[AES256_GCM,data:BaKKygksZbOMVaDxvWaiingiyr53G0C7qA==,iv:8PPNjbar1je6hU3GncoYLWx25KWmrjKvNEJxEB/vj/0=,tag:Wv8cFxUYWGyO7QFPGa1sWw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: lms-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3MktGMlN2bjZJMTFMajV4
[...]
            w8c5qHh01uQHiHi1U4QFQUizRjNVib9Gu0ehqrwESX3eqgfzKH5jww==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-07T10:02:45Z"
    mac: ENC[AES256_GCM,data:26KbbBwGsM/cegaR8HqgynabZOsx6IjlyIJns8AwY8FxwmcNj3Ppxi4KUi6+VFSKV7xTEvL+vvVFrU8rgoNr5ugXb86wqGEXNyRYBVuekP94jB1+saHfAdSD/jSdNZ961kL0iRKsodl7auJQOG69wS9ke8Z5A9za6R/lSbPewH8=,iv:cN1zrY2nlNvrmNwmyTGSAYnjFYETCzffn29C0MC0ylI=,tag:ZFihj+NgywR7MyVR2LjTlg==,type:str]
    pgp:
        - created_at: "2024-06-22T20:24:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//ckdUFF47JENHLxFJOHZDfsPBDa38fqH2UMJ+x0+OW12I
[...]
            =3F81
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
