apps/dev/lms/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:7JbxbYJYOd25KzbFaQrr5Ra95rX0Dwi5,iv:qDVcjD4gx8tQjPUIPpWePStTJF1Eb6hLZe9Hja5wV3Y=,tag:PO+nww8Kh6wm1jLNlsRFXg==,type:str]
        kubernetes.io/ingress.class: traefik-external
    # labels:
    #     app.kubernetes.io/name: lms
    name: lms-staging
    namespace: media
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:umtsKKzyfimbJcfoFxE/0WBc81NAgM2P0Wt/GbV3N1z1Xsde,iv:+Inr85qw72y5qMMyrTNYJLM90TWYF9AroMfnf/1O3wM=,tag:nWQTMxl1YoTDZD92oaW1lQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: lms
              port: 9000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:lhP4RmLkqoqO9V6fiYAmqpJcNMe2cwdq,iv:fob4tugUQjZAdyj2xW7AOa9PY7tS7gZrF3XIz2yY9f8=,tag:waPmjaBoxoezVEtbNMhoEg==,type:str]
              sans:
                - ENC[AES256_GCM,data:T/hC/+OlJK5xhjUHkLnitE4KUz/fRJctXA==,iv:Wmf2MvsZqA3poOYY7VQqP1OOQ6GLcDzW8H48pFnIjjE=,tag:WJefUyk31AyBwcIrvK6HXA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: lms-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0S1BqT0tKTm82YVJ0THU1
[...]
            91rRd0AAP6RJxZUmF0Oax4oZHOvaeMCNTPijdHto/yAvV5subkO2lg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-07T10:02:30Z"
    mac: ENC[AES256_GCM,data:ysA/IVKAIzBjAJ+/pLf9Y602N1UqMcEOkLGaeySJVIW3BapAjvGpHaa0FZo8Okw5sfTkREMFKibT4hWoFu04qThzvwb3qa3O3HSzmkvMezmhRwU5QcmIZ82syx0SaA8a9pBKwFtnQpWrwyx9m3IC2AUGKbIkT+RtwqxI+zOvKk0=,iv:B/KVG4nrzNLBglmISUMhA2q7PYb0AJviwaT7E9Sq9xU=,tag:wUAbd9Dag4o9KqaoC6PU+Q==,type:str]
    pgp:
        - created_at: "2024-06-22T20:23:56Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAwgx1mZcn7xu81b4rejL5XdzTAPJT4crvB9/91uzVYAC5
[...]
            =C1pg
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
